# hd

./: .gitignore  .replit  Pasted-Awesome-I-m-going-to-do-three-things-for-you-right-now-end-to-end-1-Full-project-plan-archit-1762089035827_1762089035828.txt  README.md  app.py  best_model.pkl  catboost_training.json  download_data.py  events.out.tfevents  index.html  inference.py  leaderboard.html  leaderboard_metrics.csv  learn_error.tsv  pipeline.pkl  pyproject.toml  replit.md  requirements.txt  result.html  risk_logic.py  styles.css  time_left.tsv  train_minimal.py  train_models.py  train_models_fast.py
