[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.8",
    "flask>=3.1.2",
    "imbalanced-learn>=0.14.0",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.1",
]
